--- a/app/templates/main/article.html
+++ b/app/templates/main/article.html
@@ -13,6 +13,11 @@
         <h1 class="am-topbar-brand">
             <a href="{{ url_for('main.index') }}">Cabbage</a>
         </h1>
+        <button class="am-topbar-btn am-topbar-toggle am-btn am-btn-sm am-btn-success am-show-sm-only"
+                data-am-collapse="{target: '#doc-topbar-collapse'}">
+            <span class="am-sr-only">导航切换</span>
+            <span class="am-icon-bars"></span>
+        </button>
         <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
             <ul class="am-nav am-nav-pills am-topbar-nav">
                 <li><a href="{{ url_for('main.index') }}">文章</a></li>
@@ -52,6 +57,12 @@
             {% else %}
                 {{ article.content }}
             {% endif %}
+            <div data-am-widget="gotop" class="am-gotop am-gotop-fixed" >
+                <a href="#top" title="回到顶部">
+                    <span class="am-gotop-title">回到顶部</span>
+                      <i class="am-icon-angle-double-up am-icon-lg"></i>
+                </a>
+            </div>
         </main>
         <nav class="post-nav">
             {% if prev_article %}
@@ -68,7 +79,6 @@
                 </a>
             {% endif %}
         </nav>
-
     </article>
 </div>
 {% endblock content %}
