--- a/app/templates/admin/my_master.html
+++ b/app/templates/admin/my_master.html
@@ -27,7 +27,7 @@ body {
         {% endblock %}
 
         <div class="am-topbar-right">
-            <a class="am-btn am-btn-primary am-topbar-btn am-btn-sm" href="{{ url_for('logout') }}">登出</a>
+            <a class="am-btn am-btn-primary am-topbar-btn am-btn-sm" href="{{ url_for('logout') }}" style="color:#fff">登出</a>
         </div>
     </div>
 </header>
