--- a/app/templates/main/article.html
+++ b/app/templates/main/article.html
@@ -4,7 +4,7 @@
 
 <link rel="stylesheet" type="text/css"
       href="{{ url_for('static', filename='css/amaze_custom.css') }}">
-
+<title>{{ article.title }}</title>
 {% endblock head %}
 
 {% block content %}
