change cdn server

--- a/app/templates/admin/my_master.html
+++ b/app/templates/admin/my_master.html
@@ -2,7 +2,7 @@
 {% extends 'admin/base.html' %}
 
 {% block head %}
-<link rel="stylesheet" href="https://cdn.bootcss.com/amazeui/2.7.2/css/amazeui.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/amazeui@2.7.2/dist/css/amazeui.min.css">
 <style>
 body {
     padding-top: 0px;
