--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -1,7 +1,7 @@
 {% extends 'admin/master.html' %}
 {% block head %}
 {{ super() }}
-<script src="https://cdn.bootcss.com/echarts/4.1.0.rc2/echarts.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/echarts@4.2.0-rc.2/dist/echarts.min.js"></script>
 {% endblock head %}
 {% block body %}
     {{ super() }}
