--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,12 +14,12 @@
             <title>Cabbge</title>
         {% endblock %}
         <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
-        <link rel="stylesheet" href="https://cdn.bootcss.com/amazeui/2.7.2/css/amazeui.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/amazeui@2.7.2/dist/css/amazeui.min.css">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/amaze_custom.css') }}">
         <!--[if (gte IE 9)|!(IE)]><!-->
-        <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js"></script>
         <!--<![endif]-->
-        <script src="https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/amazeui@2.7.2/dist/js/amazeui.min.js"></script>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/default.css') }}">
         {{moment.include_moment()}}
         <!--使用中文-->
@@ -41,11 +41,11 @@
         {% block scripts %}{% endblock %}
 
         <!--[if lte IE 8 ]>
-        <script src="https://libs.baidu.com/jquery/1.11.3/jquery.min.js"></script>
-        <script src="https://cdn.staticfile.org/modernizr/2.8.3/modernizr.js"></script>
-        <script src=https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.ie8polyfill.min.js></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery@1.11.3/dist/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/modernizr@3.6.0/src/Modernizr.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/amazeui@2.7.2/dist/js/amazeui.ie8polyfill.min.js"></script>
         <![endif]-->
-        <script src=https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js></script>
+        <script src="https://cdn.jsdelivr.net/npm/amazeui@2.7.2/dist/js/amazeui.min.js"></script>
         <script type="text/x-mathjax-config">
             MathJax.Hub.Config({
                 tex2jax: {
@@ -56,7 +56,7 @@
                 }
             });
         </script>
-        <script async src="https://cdn.bootcss.com/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_HTMLorMML"></script>
+        <script async src="https://cdn.jsdelivr.net/npm/mathjax@2.7.5/MathJax.js?config=TeX-MML-AM_HTMLorMML"></script>
         <script>
             $("img").addClass("am-img-responsive")
         </script>
