--- a/app/templates/main/archives.html
+++ b/app/templates/main/archives.html
@@ -3,6 +3,7 @@
 {% block head %}
 <link rel="stylesheet" type="text/css"
       href="{{ url_for('static', filename='css/amaze_custom.css') }}">
+<title>归档</title>
 {% endblock %}
 
 {% block content %}
