--- a/app/static/css/amaze_custom.css
+++ b/app/static/css/amaze_custom.css
@@ -114,4 +114,8 @@ blockquote {
     padding: .5em 1em;
     border-left: 5px solid #ED6A5A;
     background-color: #ed6a5a0f;
+    font-family: Athelas,STHeiti,Microsoft Yahei,serif;
+    font-weight: bold;
+    font-size: 1.5rem;
 }
+\
