--- a/app/static/css/amaze_custom.css
+++ b/app/static/css/amaze_custom.css
@@ -2,6 +2,7 @@ body {
     background-color: #fefefe;
     color: #353535;
     border-top: 3px solid #ED6A5A;
+    font-family: 'Noto Sans SC', "Segoe UI","Lucida Grande",Helvetica,Arial,"Microsoft YaHei",FreeSans,Arimo,"Droid Sans","wenquanyi micro hei","Hiragino Sans GB","Hiragino Sans GB W3",FontAwesome,sans-serif;
 }
 a {
     color: #ED6A5A;
@@ -27,13 +28,13 @@ article{
     display:flex;
     justify-content:space-between;
     margin-top: 20px;
-    font-family: Athelas,STHeiti,Microsoft Yahei,serif;
+    font-family: 'Noto Sans SC', Athelas,STHeiti,Microsoft Yahei,sans-serif;
 }
 .prev,.next{
     color: #353535;
     font-weight: 600;
     font-size: 18px;
-    font-family: Athelas,STHeiti,Microsoft Yahei,serif;
+    font-family: 'Noto Sans SC', Athelas,STHeiti,Microsoft Yahei,sans-serif;
     -webkit-transition-property: -webkit-transform;
     transition-property: -webkit-transform;
     transition-property: transform;
@@ -114,8 +115,40 @@ blockquote {
     padding: .5em 1em;
     border-left: 5px solid #ED6A5A;
     background-color: #ed6a5a0f;
-    font-family: Athelas,STHeiti,Microsoft Yahei,serif;
-    font-weight: bold;
+    font-family: 'Noto Sans SC', Athelas,STHeiti,Microsoft Yahei,sans-serif;
+    /* font-weight: bold; */
     font-size: 1.5rem;
 }
-\
+
+pre {
+    padding: 1em;
+    border: none;
+    overflow: auto;
+    font-size: 1.6rem;
+    line-height: 1.3;
+    max-height: 35em;
+    position: relative;
+    background: #F6F6F6;
+    -moz-background-size: 30px,30px;
+    -o-background-size: 30px,30px;
+    -webkit-background-size: 30px,30px;
+    background-size: 30px,30px;
+}
+
+code {
+    margin: 0.29412em;
+    padding: .07353em 0;
+    border-radius: .1rem;
+    box-shadow: 0.29412em 0 0 hsla(0,0%,92.5%,.5), -0.29412em 0 0 hsla(0,0%,92.5%,.5);
+    word-break: break-word;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+    background-color: hsla(0,0%,92.5%,.5);
+    white-space: wrap;
+    color: #37474f;
+    font-size: 85%;
+}
+
+code, kbd, pre, samp {
+    font-family: 'Roboto Mono', Monaco,Menlo,Consolas,"Courier New",FontAwesome,monospace;
+}
