--- a/app/templates/main/article.html
+++ b/app/templates/main/article.html
@@ -4,6 +4,8 @@
 
 <link rel="stylesheet" type="text/css"
       href="{{ url_for('static', filename='css/amaze_custom.css') }}">
+<link rel="stylesheet" type="text/css"
+      href="{{ url_for('static', filename='css/auto-number-title.css') }}">
 <title>{{ article.title }}</title>
 {% endblock head %}
 
