--- a/app/templates/main/archives.html
+++ b/app/templates/main/archives.html
@@ -2,6 +2,8 @@
 {% import 'main/_macros.html' as macros %}
 {% block head %}
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/amaze_custom.css') }}">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
 <title>归档</title>
 {% endblock %}
 
